--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&family=Poppins:wght@300;400;500;600;700;800;900&family=Sono:wght@400;600&family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;1,900&display=swap");
 #root,
 body,
 html {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 .App {
   text-align: center;
   height: 100%;
-}
-
-.App-header {
-  height: 100px;
-  border-bottom: 1px solid grey;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
 }
