--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&family=Poppins:wght@300;400;500;600;700;800;900&family=Sono:wght@400;600&family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700&display=swap");
 #root,
 body,
 html {
@@ -6,7 +6,7 @@ html {
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Figtree", sans-serif;
 }
 .App {
   text-align: center;
