--- a/src/Editor/index.css
+++ b/src/Editor/index.css
@@ -15,3 +15,6 @@
   background: #f9fbfc 0% 0% no-repeat padding-box;
   box-shadow: 1px 1px 1px #00000029;
 }
+.draggable:hover{
+  cursor: pointer;
+}
