--- a/src/Editor/EditorCanvas/DraggableElements/table.css
+++ b/src/Editor/EditorCanvas/DraggableElements/table.css
@@ -1,21 +1,25 @@
 table {
   border-collapse: collapse;
-  border-radius: 2rem;
+  border: 1.3px solid gray;
+  border-style: dotted;
 }
 
 th,
 td {
   padding: 1rem 2rem;
   text-align: left;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 2px dashed #ddd;
 }
 
 th {
-  background-color: #f2f2f2;
+  background-color: #d8d8d8;
   color: #333;
   font-weight: bold;
 }
 
+tr {
+  background-color: #ffffff;
+}
 tr:hover {
   background-color: #f5f5f5;
 }
