--- a/src/Editor/index.css
+++ b/src/Editor/index.css
@@ -5,16 +5,16 @@
 
 .editor-canvas {
   width: calc(100% - 250px);
-  height: 95vh;
+  height: 100vh;
+  background-color: rgb(233, 239, 242);
 }
 
 .editor-picker {
   padding: 25px;
   width: 400px;
-  border-left: 1px solid black;
   background: #f9fbfc 0% 0% no-repeat padding-box;
   box-shadow: 1px 1px 1px #00000029;
 }
-.draggable:hover{
+.draggable:hover {
   cursor: pointer;
 }
