--- a/src/Header/index.css
+++ b/src/Header/index.css
@@ -1,5 +1,4 @@
 .header {
-  border-bottom: 1px solid grey;
   font-size: calc(10px + 2vmin);
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 1px 0px 0px #fcfcfc03;
@@ -7,6 +6,7 @@
 }
 
 p {
-    padding: 0 2rem;
-    text-align: left;
+  margin: 0;
+  padding: 2rem;
+  text-align: left;
 }
